# docs/swagger.yaml
@@ -174,6 +174,9 @@ definitions:
         maxLength: 60
         minLength: 2
         type: string
+      number:
+        example: "123"
+        type: string
       phoneNumber:
         type: string
       roleSlug:
@@ -183,6 +186,9 @@ definitions:
         - attendantOwner
         - attendant
         - manager
+        type: string
+      zipCode:
+        example: "06543001"
         type: string
     required:
     - bornAt
@@ -6736,7 +6742,7 @@ paths:
       - BearerAuth: []
       summary: Accept or reject a photo session
       tags:
-      - Listing Schedules
+      - Photographer
   /realtor/creci/upload-url:
     post:
       consumes:
